--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,13 @@
+Tue Sep 26 10:34:03 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bseblockutils.cc bseblockutils.hh: Provide hook for testing the
+	resampler2 implementation.
+
+	* tests/testresampler.cc bseresamplerimpl.hh: Moved SSE filter
+	implementation test to the new function fir_test_filter_sse, which
+	can then be properly compiled using -msse within the bseblockutils
+	plugin for the SSE case.
+
 Fri Sep 22 15:25:19 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/testresampler.cc: Make resampler more user friendly, by using
