--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Wed Sep 27 11:30:27 2006  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/Makefile.am:
+	* tests/testresampler.cc: Moved testresampler.cc from bse/tests to
+	slowtests, to prepare it for automatic accuracy testing. Excessive
+	automatic testing will be quite slow, thus it needs to be in this
+	directory.
+
 Wed Sep 27 11:27:35 2006  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/testresampler.cc: Allow using --fpu instead of
