--- a/TODO
+++ b/TODO
@@ -760,4 +760,20 @@ Misc Buglets/Feature Requests:
  - implement fractional resampler (oversampling)
  - crashes    #340437                                                                [ 0.7.0, pending ]
 
+The MCD timeline says:
+- upsample datahandle review
+- downsample datahandle implementation
+- wavetool commandos fuer upsample und downsample datahandles
+- autolooper fuer wavetool
+- low pass fuer wavetool
+- man page fuer wavetool
+* 0.7.1? (+ Hydrogen-DrumKit.bsewave?)
+- (accuracy) tests fuer highpass und lowpass
+- fertigstellen von GUS support, meine alte TODO liste hierzu:
++ quantize gus-patch playback error, decide what to do about gus patches (rip them?)
+- start von bse-data-gpl.tgz
+- fertigstellen von jack treiber
+* 0.7.2?
+- scripting/cooperation with mma
+
 vim:set ts=8 sts=2 sw=2:
