--- a/TODO
+++ b/TODO
@@ -775,5 +775,6 @@ The MCD timeline says:
 - fertigstellen von jack treiber
 * 0.7.2?
 - scripting/cooperation with mma
+- send 64bit diffs to timj
 
 vim:set ts=8 sts=2 sw=2:
