introduce BIRNET_CONSTRUCTOR which wraps gcc's "constructor" argument. as
Thu Sep 28 01:01:55 2006 Tim Janik <timj@gtk.org>

        * birnetcore.h: introduce BIRNET_CONSTRUCTOR which wraps gcc's
        "constructor" argument. as a work around for gcc-3.3, which tends
        to forget to emit code for static constructor functions if
        -finline-functions is activated, also add attribute "used".

        * birnetthread.h:
        * birnetmsg.h: use BIRNET_CONSTRUCTOR to declare constructor functions.

        * tests/threads.cc: added a check for proper constructor function
        invokation before main().

svn path=/trunk/; revision=3926

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Overview of Changes in BEAST/BSE 0.7.1:
+
+* Fixes for gcc-3.3
+
 Overview of Changes in BEAST/BSE 0.7.0:
 
 * Renamed scheme shell to bsescm
