--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,12 @@
+Tue Oct  3 18:44:43 2006  Tim Janik  <timj@gtk.org>
+
+	* moved remaining sfi/ tests to sfi/tests.
+
+	* tests/misctests.c: moved here from sfi/testsfi.c.
+
+	* tests/testsfidl.cc:
+	* tests/testidl.idl: moved here from sfi/.
+
 Tue Oct  3 17:57:59 2006  Tim Janik  <timj@gtk.org>
 
 	* tests/testcxx.cc: moved here from sfi/.
