--- a/TODO
+++ b/TODO
@@ -764,6 +764,7 @@ Misc Buglets/Feature Requests:
 The MCD timeline says:
 - upsample datahandle review
 - downsample datahandle implementation
+  + resampler state size
 - wavetool commandos fuer upsample und downsample datahandles
 - autolooper fuer wavetool
 - low pass fuer wavetool
